--- a/Ansible/V2-jenkins-slave-setup.yaml
+++ b/Ansible/V2-jenkins-slave-setup.yaml
@@ -33,6 +33,15 @@
       name: docker
       state: started
 
-  #- name: give 777 permissions on /var/run/docker.sock
+  - name: give 777 permissions on /var/run/docker.sock
+    file:
+      path: /var/run/docker.sock
+      state: file
+      mode: 0777
+
+  - name: start docker in boot time
+    service:
+      name: docker
+      enabled: yes
 
 
