--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -1,4 +1,6 @@
 def registry = 'https://galaxy02.jfrog.io'  // Jfrog registry URL
+def imageName = 'galaxy02.jfrog.io/galaxy-docker-local/ttrend'  // Jfrog docker repository path and artifact image name
+def version   = '2.1.3'
 pipeline {
     agent  {
         node {
@@ -71,6 +73,37 @@ environment {
             
             }
         }   
+    }
+
+    stage(" Docker Build ") {
+      steps {
+        script {
+           echo '<--------------- Docker Build Started --------------->'
+           app = docker.build(imageName+":"+version)
+           echo '<--------------- Docker Build Ends --------------->'
+        }
+      }
+    }
+
+            stage (" Docker Publish "){
+        steps {
+            script {
+               echo '<--------------- Docker Publish Started --------------->'  
+                docker.withRegistry(registry, 'Jfrog-cred'){
+                    app.push()
+                }    
+               echo '<--------------- Docker Publish Ended --------------->'  
+            }
+        }
+    }
+
+    stage ("Deploy") {
+      steps {
+        script {
+          sh './deploy.sh'
+        }
+      }
     }   
 }        
-}
+}   
+      
